# Polymarket_data

./: .env.example  .gitattributes  PLAN_clean_rebuild.md  README.md  README_zh.md  pyproject.toml
data/: README.md
polymarket/: config.py
polymarket/cli/: main.py
polymarket/data/: failed_blocks_20260330_000359.txt
polymarket/fetchers/: rpc.py
polymarket/processors/: __init__.py  trades.py
polymarket/tools/: continuous_fetch.py  filter_crypto_orderfilled.py  merge_parquet.py  refetch_failed_blocks.py
scripts/: clean_data.sh  continuous_start.sh  fetch_markets.sh  fetch_onchain.sh  update_all.sh
