[project]
name = "polymarket-data"
version = "1.0.0"
description = "A high-performance toolkit for fetching and processing Polymarket on-chain data"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
dependencies = [
    "web3>=6.0.0",
    "requests>=2.28.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "eth-abi>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/SII-WANGZJ/Polymarket_data"
Repository = "https://github.com/SII-WANGZJ/Polymarket_data"

[project.scripts]
polymarket = "polymarket.cli.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["polymarket*"]
